--- a/DoToo/Views/MainView.xaml
+++ b/DoToo/Views/MainView.xaml
@@ -11,6 +11,8 @@
         <ResourceDictionary>
             <converters:StatusColorConverter
                 x:Key="statusColorConverter" />
+            <converters:FilterTextConverter
+                x:Key="filterTextConverter" />
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.ToolbarItems>
@@ -22,7 +24,9 @@ AddItemAsyncCommand}" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Button Text="Toggle filter" />
+        <Button Text="{Binding ShowAll,Converter={StaticResource
+filterTextConverter}, StringFormat='Filter: {0}'}"
+                Command="{Binding ToggleFilterAsyncCommand}" />
         <ListView x:Name="ItemsListView" Grid.Row="1"
                   RowHeight="70" ItemsSource="{Binding Items}"
                   SelectedItem="{Binding SelectedItem}">
